--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,7 @@ a:hover{color:#575757;}
     background-color: #fff;}
 
 #header{width:100%;
-        height:140px;
+        height:200px;
         padding-bottom:10px;
         border-bottom:#ddd solid 2px;
         }
@@ -33,13 +33,11 @@ a:hover{color:#575757;}
 #logo{width:200px;
         height:100px;
         margin:0 auto;
-        position:relative;
-        top:35px;
-      }
+        }
 
 .con_wrap{width: 100%;
         margin-top:70px;
-            }
+        }
 
 .con li{width:270px;
         float:left;
@@ -48,7 +46,10 @@ a:hover{color:#575757;}
 
 .con li:nth-child(4n+1){margin-left:0;}
 
-.con li img{width:100%;}
+.con li img{width:100%;
+        margin-bottom: 20px;}
+
+.con li h2{text-align: center;}
 
 
 
@@ -61,8 +62,8 @@ a:hover{color:#575757;}
 /* poster pages */
 
 #title{text-align: center;
-        line-height: 140px;
-        font-size: 40;}
+        line-height: 200px;
+        font-size: 40px;}
 
 .con_wrap_2{width: 100%;
             margin-top:70px;
@@ -88,12 +89,12 @@ a:hover{color:#575757;}
 .con_wrap_3{width: 100%;
             margin-top:70px;}
             
-.con_3 li{width:250px;
+.con_3 li{width:260px;
             float:left;
             margin-left:20px;
             margin-bottom: 50px;}
 
-.con_3 li:nth-child(4n+1){margin-left:0;}
+/* .con_3 li:nth-child(4n+1){margin-left:0;} */
 
 .con_3 li img{width:100%;}
 
@@ -108,3 +109,10 @@ a:hover{color:#575757;}
 
 
 /* map */
+
+
+
+
+
+
+
