--- a/Senior/css/layout.css
+++ b/Senior/css/layout.css
@@ -7,6 +7,8 @@
         font-weight: normal;
         font-style: normal;
    }
+   @import url(https://fonts.googleapis.com/css?family=Oswald);
+   @import url(https://fonts.googleapis.com/css?family=Quattrocento);
 
 body { background:#fff;font-family:"gulim", sans-serif;font-size:12px;color:#5b5b5b;line-height:100%;font-weight:normal;padding:0px;margin:0px;letter-spacing:-0px; }
 html, body { width:100%;height:100%;letter-spacing:0px; }
@@ -138,7 +140,7 @@ a:hover{color:#575757;}
             
             font-family: 'NIXGONL-Vb';}
 
-/* .con_3 li:nth-child(4n+1){margin-left:0;} */
+.con_3 li:nth-child(4n+1){margin-left:10px;}
 
 .con_3 li img{width:100%;
                 height: 347px;}
@@ -210,8 +212,7 @@ a:hover{color:#575757;}
 
 /* test2 */
 
-@import url(https://fonts.googleapis.com/css?family=Oswald);
-@import url(https://fonts.googleapis.com/css?family=Quattrocento);
+
 .snip1361 {
   font-family: 'Quattrocento', Arial, sans-serif;
   position: relative;
